tests/ui/masterror/fail/duplicate_attr.stderr
error: duplicate #[masterror(...)] attribute
  --> tests/ui/masterror/fail/duplicate_attr.rs:10:1
   |
10 | #[masterror(code = AppCode::Internal, category = AppErrorKind::Internal)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `AppCode` and `AppErrorKind`
 --> tests/ui/masterror/fail/duplicate_attr.rs:5:17
  |
5 | use masterror::{AppCode, AppErrorKind, Masterror};
  |                 ^^^^^^^  ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
